--- a/services.html
+++ b/services.html
@@ -41,6 +41,10 @@
 </li>
 <li><p>Session Chiar: International Conference on Wireless Communications and Signal Processing (WCSP), 2021.</p>
 </li>
+<h3>Reviewers for: </h3>
+<ul>
+<li><p>IEEE Journal on Selected Areas in Communications</p>
+</li>
 </ul>
 <h2>Journals </h2>
 <h3>Reviewers for: </h3>
