--- a/papers.html
+++ b/papers.html
@@ -31,11 +31,11 @@
 <ol>
  <li><p><a href="">Adversarial Attacks on Large Language Model-Based System and Mitigating Strategies: A Case Study on ChatGPT</a><br />
 Bowen Liu, Boao Xiao, Xutong Jiang, Siyuan Wu, <b>Xin He</b>, Wanchun Dou. <br />
-Security and Communication Networks (<b>SCN</b>), 2023.  <br /></p>
+Security and Communication Networks (<b>SCN</b>), 1-10, 2023.  <br /></p>
 </li> 
  <li><p><a href="">Joint Optimization of Measurement Point Intelligent Selection and End-to-End Network Traffic Calculation in Datacenters</a><br />
 Weibei Fan, Fu Xiao, Lei Han, <b>Xin He</b>, Junchang Wang. <br />
-IEEE Transactions on Network Science and Engineering (<b>TNSE</b>), in press.  <br /></p>
+IEEE Transactions on Network Science and Engineering (<b>TNSE</b>), 1-12, 2023.  <br /></p>
 </li>
 <li><p><a href="">Generalized Image Embedding for Multi-Domain Image Retrieval</a><br />
 Boao Xiao, Siyuan Wu, <b>Xin He*</b>, Wanchun Dou. <br />
