--- a/services.html
+++ b/services.html
@@ -37,13 +37,13 @@
 </li>
 <li><p>Theme Forum Chair: Conference on Bussiness Process Management (CBPM), 2022.</p>
 </li>
-<li><p>Session Chiar: IEEE International Conference on Parallel and Distributed Systems (ICPADS), 2021.</p>
+<li><p>Session Chair: IEEE International Conference on Parallel and Distributed Systems (ICPADS), 2021.</p>
 </li>
-<li><p>Session Chiar: International Conference on Wireless Communications and Signal Processing (WCSP), 2021.</p>
+<li><p>Session Chair: International Conference on Wireless Communications and Signal Processing (WCSP), 2021.</p>
 </li>
 <h3>Reviewers for: </h3>
 <ul>
-<li><p>IEEE Journal on Selected Areas in Communications</p>
+<li><p>SIGCOMM China, 2023</p>
 </li>
 </ul>
 <h2>Journals </h2>
