--- a/teaching.html
+++ b/teaching.html
@@ -30,8 +30,8 @@
 <ul>
 <li><p>Computer Network Technology and Application, Nanjing University of Posts and Telecommunications</p>
 <ul>
-<li><p>Spring 2023.
-<li><p>Fall 2023.
+<li><p>Spring 2023, Fall 2023.</p>
+  
 <li><p>Design and Implementation of TCP/IP Network, Nanjing University of Posts and Telecommunications</p>
 <ul>
 <li><p>Fall 2023.
