--- a/papers.html
+++ b/papers.html
@@ -29,6 +29,9 @@
 <p> * denotes the corresponding author.</p>
 <h2>Conference/workshop proceedings and journal publications</h2>
 <ol>
+  <li><p><a href="">A Distributed Learning Method for Deep Echo State Network Based on Improved SVD and ADMM </a><br />
+Meifeng Zhu, Jian Zhou, Hui Cai, <b>Xin He</b>, Fu Xiao. <br />
+In Proceedings of the 20th International Conference on Mobile Ad Hoc and Smart Systems (<b>MASS</b>), Toronto, Canada, September 25-27, 2023. (CCF-C) <br /></p> 
  <li><p><a href="">Adversarial Attacks on Large Language Model-Based System and Mitigating Strategies: A Case Study on ChatGPT</a><br />
 Bowen Liu, Boao Xiao, Xutong Jiang, Siyuan Wu, <b>Xin He</b>, Wanchun Dou. <br />
 Security and Communication Networks (<b>SCN</b>), 1-10, 2023.  <br /></p>
