--- a/services.html
+++ b/services.html
@@ -61,6 +61,8 @@
 </li>
 <li><p>The Journal of Supercomputing</p>
 </li>
+<li><p>Software: Practice and Experience</p>
+</li>
 </ul>
 <h2>Professional Membership</h2>
 <ul>
