--- a/papers.html
+++ b/papers.html
@@ -29,6 +29,9 @@
 <p> * denotes the corresponding author.</p>
 <h2>Conference/workshop proceedings and journal publications</h2>
 <ol>
+ <li><p><a href="">Cost-Effective Migration-Assisted User Reallocation in Edge Computing </a><br />
+Jiahao Zhu, Fu Xiao, Lu Zhao, Jian Zhou, Hui Cai, <b>Xin He</b>. <br />
+In Proceedings of 2023 IEEE Global Communications Conference (<b>GLOBECOM</b>), Kuala Lumpur, Malaysia, December 4-8, 2023. (CCF-C) <br /></p> 
   <li><p><a href="">A Distributed Learning Method for Deep Echo State Network Based on Improved SVD and ADMM </a><br />
 Meifeng Zhu, Jian Zhou, Hui Cai, <b>Xin He</b>, Fu Xiao. <br />
 In Proceedings of the 20th International Conference on Mobile Ad Hoc and Smart Systems (<b>MASS</b>), Toronto, Canada, September 25-27, 2023. (CCF-C) <br /></p> 
