--- a/papers.html
+++ b/papers.html
@@ -37,7 +37,7 @@ Meifeng Zhu, Jian Zhou, Hui Cai, <b>Xin He</b>, Fu Xiao. <br />
 In Proceedings of the 20th International Conference on Mobile Ad Hoc and Smart Systems (<b>MASS</b>), Toronto, Canada, September 25-27, 2023. (CCF-C) <br /></p> 
  <li><p><a href="">Adversarial Attacks on Large Language Model-Based System and Mitigating Strategies: A Case Study on ChatGPT</a><br />
 Bowen Liu, Boao Xiao, Xutong Jiang, Siyuan Wu, <b>Xin He</b>, Wanchun Dou. <br />
-Security and Communication Networks (<b>SCN</b>), 1-10, 2023.  <br /></p>
+Security and Communication Networks (<b>SCN</b>), 1-10, 2023. (CCF-C) <br /></p>
 </li> 
  <li><p><a href="">Joint Optimization of Measurement Point Intelligent Selection and End-to-End Network Traffic Calculation in Datacenters</a><br />
 Weibei Fan, Fu Xiao, Lei Han, <b>Xin He</b>, Junchang Wang. <br />
