--- a/services.html
+++ b/services.html
@@ -29,6 +29,8 @@
 <h2>Conferences and Workshops</h2>
 <h3>Executive Committee Membership</h3>
 <ul>
+<li><p>TPC: IEEE International Symposium on Parallel and Distributed Processing with Applications (ISPA), 2023.</p>
+</li>
 <li><p>Workshop Chair: International Conference on Algorithms and Architectures for Parallel Processing (ICA3PP), 2023.</p>
 </li>
 <li><p>Session Chair: Wireless Algorithms, Systems, and Applications (WASA), 2023.</p>
