--- a/students.html
+++ b/students.html
@@ -29,18 +29,21 @@
 <h2>Current students:</h2>
 <p>I'm co-supervising these talented students with <a href="https://yjs.njupt.edu.cn/dsgl/nocontrol/college/dsfcxq.htm?dsJbxxId=9B9D05C52A832DCFE050007F01006EFE">Prof. Fu Xiao</a>.</p>
 
-<div style="display:none;"> 
 <h3>Ph.D. students:</h3>
 <ul>
-<li><p>XXX, 2022&ndash;, on online optimization</p>
+<li><p>Yang Xiao, 2025&ndash; </p>
 </li>
 </div> 
 </ul>
 <h3>Master students:</h3>
 <ul>
-<li><p>Yan Li, 2022&ndash; </p>
+   <li><p>Zihao Zhang, 2022&ndash; </p>
 </li>
-<li><p>Feifan Liang, 2021&ndash; </p>
+  <li><p>Zhen Zhang, 2024&ndash; </p>
+</li>
+  <li><p>Mingyu Cai, 2023&ndash; </p>
+</li>
+<li><p>Yan Li, 2022&ndash; </p>
 </li>
 </ul>
 <h3>Undergraduates:</h3>
@@ -53,9 +56,15 @@
 <h2>Alumni:</h2>
 <p>I have worked with these talented students:</p>
 <ul>
+  </li>
+<li><p>Feifan Liang, Master, 2021-2024. -&gt; Jiangsu Provincial Department of Agriculture and Rural Affairs, Nanjing, China.;</p>  
+</li>
+<li><p>Yizhou Zhao, Undergraduate, 2022-2024. -&gt; Tsinghua University, Beijing, China.;</p>  
+ </li> 
 <li><p>Bochun Yang,  Undergraduate, 2022-2023. -&gt; Southeast University, Nanjing, China.</p>
 </li>
-<div style="display:none;"> 
+<div style="display:none;">   
+<li><p>Yizhou Zhao, Undergraduate, 2022-2024. -&gt; Tsinghua University, Beijing, China.;</p>
 <li><p>Gaofei Xiao, Master student, 2019-2022. -&gt; Software engineer, Alibaba Group, Hangzhou, China.</p>
 </li>
 <li><p>Weirong Chen, Master student, 2019-2022. -&gt; Software engineer, miHoYo Technology, Shanghai, China.</p>
