--- a/students.html
+++ b/students.html
@@ -37,7 +37,7 @@
 </ul>
 <h3>Master students:</h3>
 <ul>
-   <li><p>Zihao Zhang, 2022&ndash; </p>
+   <li><p>Zihao Zhang, 2024&ndash; </p>
 </li>
   <li><p>Zhen Zhang, 2024&ndash; </p>
 </li>
@@ -46,6 +46,7 @@
 <li><p>Yan Li, 2022&ndash; </p>
 </li>
 </ul>
+ <div style="display:none;"> 
 <h3>Undergraduates:</h3>
 <ul>
 <li><p>Yizhou Zhao, 2022&ndash;</p>
