--- a/papers.html
+++ b/papers.html
@@ -29,6 +29,12 @@
 <p> * denotes the corresponding author.</p>
 <h2>Conference/workshop proceedings and journal publications</h2>
 <ol>
+   <li><p><a href="">A Game Theoretic Approach for Efficient Congestion Control in Datacenter Networks </a><br />
+Likai Liu, Fu Xiao, Lei Han, Weibei Fan, <b>Xin He</b>. <br />
+IEEE Transactions on Network Science and Engineering (<b>TNSE</b>), 11(6): 6328-6344, 2024. <br /></p> 
+   <li><p><a href="">Accurate and fast congestion feedback in MEC-enabled RDMA datacenters </a><br />
+<b>Xin He</b>, Feifan Liang, Weibei Fan, Junchang Wang, Lei Han, Fu Xiao, Wanchun Dou. <br />
+Journal of Cloud Computing, 13(1): 72, 2024.<br /></p> 
  <li><p><a href="">Cost-Effective Migration-Assisted User Reallocation in Edge Computing </a><br />
 Jiahao Zhu, Fu Xiao, Lu Zhao, Jian Zhou, Hui Cai, <b>Xin He</b>. <br />
 In Proceedings of 2023 IEEE Global Communications Conference (<b>GLOBECOM</b>), Kuala Lumpur, Malaysia, December 4-8, 2023. (CCF-C) <br /></p> 
@@ -41,7 +47,7 @@ Security and Communication Networks (<b>SCN</b>), 1-10, 2023. (CCF-C) <br /></p>
 </li> 
  <li><p><a href="">Joint Optimization of Measurement Point Intelligent Selection and End-to-End Network Traffic Calculation in Datacenters</a><br />
 Weibei Fan, Fu Xiao, Lei Han, <b>Xin He</b>, Junchang Wang. <br />
-IEEE Transactions on Network Science and Engineering (<b>TNSE</b>), 1-12, 2023.  <br /></p>
+IEEE Transactions on Network Science and Engineering (<b>TNSE</b>), 11(3): 2438-2449, 2023.  <br /></p>
 </li>
 <li><p><a href="">Generalized Image Embedding for Multi-Domain Image Retrieval</a><br />
 Boao Xiao, Siyuan Wu, <b>Xin He*</b>, Wanchun Dou. <br />
