--- a/students.html
+++ b/students.html
@@ -37,13 +37,15 @@
 </ul>
 <h3>Master students:</h3>
 <ul>
+   <li><p>Liuly Zhang, 2025&ndash; </p>
+</li>
+   <li><p>Zheng Wang, 2025&ndash; </p>
+</li>
    <li><p>Zihao Zhang, 2024&ndash; </p>
 </li>
   <li><p>Zhen Zhang, 2024&ndash; </p>
 </li>
   <li><p>Mingyu Cai, 2023&ndash; </p>
-</li>
-<li><p>Yan Li, 2022&ndash; </p>
 </li>
 </ul>
 
@@ -57,6 +59,8 @@
 <p>I have worked with these talented students:</p>
 <ul>
   </li>
+  <li><p>Yan Li, Master, 2022-2025.&ndash; </p>
+</li>
 <li><p>Feifan Liang, Master, 2021-2024. -&gt; Jiangsu Provincial Department of Agriculture and Rural Affairs, Nanjing, China.;</p>  
 </li>
 <li><p>Yizhou Zhao, Undergraduate, 2022-2024. -&gt; Tsinghua University, Beijing, China.;</p>  
