--- a/teaching.html
+++ b/teaching.html
@@ -30,7 +30,7 @@
 <ul>
 <li><p>Computer Network Technology and Application, Nanjing University of Posts and Telecommunications</p>
 <ul>
-<li><p>Spring 2023, Fall 2023, Spring 2024, Fall 2024.</p>
+<li><p>Spring 2023, Fall 2023, Spring 2024, Fall 2024, Fall 2025.</p>
 
 </li>
 </ul> 
