--- a/students.html
+++ b/students.html
@@ -59,7 +59,7 @@
 <p>I have worked with these talented students:</p>
 <ul>
   </li>
-  <li><p>Yan Li, Master, 2022-2025.; </p>
+  <li><p>Yan Li, Master, 2022-2025. -&gt; Shanghai XINXI Information Technology Co., Ltd., Shanghai, China.; </p>
 </li>
 <li><p>Feifan Liang, Master, 2021-2024. -&gt; Jiangsu Provincial Department of Agriculture and Rural Affairs, Nanjing, China.;</p>  
 </li>
