--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@ Email: xhe [at] njupt.edu.cn <br />
 <a href="https://github.com/jzheng369"><img src="img/github.png" alt="github" height="32px" style="vertical-align:middle" /></a>
 -->
 
-<p>I  looking for students with strong interests to work on data center and edge computing networks. <br>欢迎对数据中心及边缘计算网络感兴趣的同学，直接通过邮箱联系我！特别欢迎编程能力强，数学功底好的同学！ </p>
+<p>I am  looking for students with strong interests to work on data center and edge intelligence. <br>欢迎对数据中心及边缘智能感兴趣的同学，直接通过邮箱联系我！特别欢迎编程能力强，数学功底好的同学！ </p>
 </td></tr></table>
 
 
@@ -54,9 +54,9 @@ Email: xhe [at] njupt.edu.cn <br />
 
 
 <h2>Research Interests</h2>
-<p>I focus on investigating the technological deficiencies in computer networks. I aim to address practical network problems and improve the system performance by using mathematical models and buliding systems. My research inserests are:  </p>
+<p>I focus on investigating the technological deficiencies in computer networks. I aim to address practical network problems and improve the system performance by using mathematical models and building systems. My research interests are:  </p>
 <ul>
-<li><p><b>Data center network</b>: Priority-based flow control, flow scheduling, RDMA congestion control, lossless transmission protocal.</p>
+<li><p><b>Data center network</b>: Priority-based flow control, flow scheduling, RDMA congestion control, lossless transmission protocol.</p>
 </li>
 </ul>
 <ul>
