--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@ Email: xhe [at] njupt.edu.cn <br />
 </li>
 </ul>
 <ul>
-<li><p><b>Edge computing network</b>: Jointly resource optimazation, federated learning application.</p>
+<li><p><b>Edge intelligence</b>: Jointly resource optimization, large language model deployment and application.</p>
 </li>
 </ul>
 <ul>
