--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@ Email: xhe [at] njupt.edu.cn <br />
 </ul>
 
 <h2>Prospective Students</h2>
-<p>I am always looking for self-movitated students (Master/Undergraduates). Students with strong coding ability and/or mathematical background (EE, math) are highly encouraged. I have <b>two</b> master positions every year (每年可招收2名硕士研究生). Drop me an email if you are interested in working with me. </p>
+<p>I am always looking for self-motivated students (Master/Undergraduates). Students with strong coding ability and/or mathematical background (EE, math) are highly encouraged. I have <b>two</b> master positions every year (每年可招收2名硕士研究生). Drop me an email if you are interested in working with me. </p>
 <h2>News</h2>
 <ul>
 </li>
