--- a/services.html
+++ b/services.html
@@ -61,7 +61,11 @@
 </li>
 <li><p>IEEE Transactions on Parallel and Distributed Systems</p>
 </li>
+<li><p>IEEE Transactions on Industrial Informatics</p>
+</li>
 <li><p>IEEE Transactions on Network Science and Engineering</p>
+</li>
+<li><p>Computer Networks</p>
 </li>
 <li><p>Frontiers of Computer Science</p>
 </li>
