--- a/students.html
+++ b/students.html
@@ -39,7 +39,7 @@
 </ul>
 <h3>Master students:</h3>
 <ul>
-   <li><p>Liuly Zhang, 2025&ndash; </p>
+   <li><p>Liulu Zhang, 2025&ndash; </p>
 </li>
    <li><p>Zheng Wang, 2025&ndash; </p>
 </li>
