--- a/papers.html
+++ b/papers.html
@@ -30,7 +30,7 @@
 <h2>Conference/workshop proceedings and journal publications</h2>
 <ol>
   <li><p><a href="">Thunder: Minimum I/O Latency of Disaggregated Storage by Packet-Level Write-Through </a><br />
-Fu Xiao, Weibei Fan, <b>Xin He</b>. <br />, Junchang Wang, Lei Han, Xiaoliang Wang, Chen Tian, Xia Zhu
+Fu Xiao, Weibei Fan, <b>Xin He</b>, Junchang Wang, Lei Han, Xiaoliang Wang, Chen Tian, Xia Zhu. <br />
 IEEE Transactions on Networking (<b>TNET</b>), 2025. <br /></p> 
    <li><p><a href="">A Game Theoretic Approach for Efficient Congestion Control in Datacenter Networks </a><br />
 Likai Liu, Fu Xiao, Lei Han, Weibei Fan, <b>Xin He</b>. <br />
