--- a/services.html
+++ b/services.html
@@ -68,6 +68,8 @@
 <li><p>IEEE Transactions on Network Science and Engineering</p>
 </li>
 <li><p>Computer Networks</p>
+</li>  
+<li><p>Big Data Mining and Analytics</p>
 </li>
 <li><p>Frontiers of Computer Science</p>
 </li>
