--- a/students.html
+++ b/students.html
@@ -39,6 +39,10 @@
 </ul>
 <h3>Master students:</h3>
 <ul>
+  <li><p>Hongli You, 2026&ndash; </p>
+</li>
+    <li><p>Ruiyang Gao, 2025&ndash; </p>
+</li>
    <li><p>Liulu Zhang, 2025&ndash; </p>
 </li>
    <li><p>Zheng Wang, 2025&ndash; </p>
@@ -58,6 +62,10 @@
 <h2>Alumni:</h2>
 <p>I have worked with these talented students:</p>
 <ul>
+  </li>
+<li><p>Maolin Wang, Undergraduate, 2022-2026. -&gt; University of Electronic Science and Technology of China, Chengdu, China.;</p>  
+  </li>
+<li><p>Chenghao Liao, Undergraduate, 2024-2025. -&gt; Southeast University, Nanjing, China.;</p>  
   </li>
   <li><p>Yan Li, Master, 2022-2025. -&gt; Shanghai XINXI Information Technology Co., Ltd., Shanghai, China.; </p>
 </li>
