--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 <a href="https://cs.njupt.edu.cn/">School of Computer Science</a> <br />
 <a href="https://www.njupt.edu.cn/">Nanjing University of Posts and Telecommunications</a><br />
 No.9, Wenyuan Road, Yadong New District, Nanjing, Jiangsu 210023, China <br /> </p>
-<p>Office: CS Building 423 <br />
+<p>Office: CS Building 424 <br />
 
 
 Email: xhe [at] njupt.edu.cn <br />
@@ -86,8 +86,10 @@ Email: xhe [at] njupt.edu.cn <br />
 <p>I am always looking for self-motivated students (Master/Undergraduates). Students with strong coding ability and/or mathematical background (EE, math) are highly encouraged. I have <b>two</b> master positions every year (每年可招收2名硕士研究生). Drop me an email if you are interested in working with me. </p>
 <h2>News</h2>
 <ul>
+  </li>
+<li><p>07/2025. One paper was accepted to IEEE TNET.</p>
 </li>
-<li><p>02/2023. One paper accepted to IEEE TPDS.</p>
+<li><p>02/2023. One paper was accepted to IEEE TPDS.</p>
 </li> 
 <li><p>12/2022. I received the IEEE Outstanding Leadership Award!
 </li>
@@ -95,15 +97,15 @@ Email: xhe [at] njupt.edu.cn <br />
 </li>
 <li><p>07/2022. I received the State Key Lab. for Novel Software Technology under Grant No. KFKT2022B04!
 </li>
-<li><p>05/2022. One paper accepted to IEEE ICWS 2022.
+<li><p>05/2022. One paper was accepted to IEEE ICWS 2022.
 </li>
 <li><p>05/2022. I received the Natural Science Foundation of Jiangsu Province under Grant No. BK20220389!
 </li>
 <li><p>03/2022. I received the Natural Science Foundation of the Higher Education Institutions of Jiangsu Province under Grant No. 22KJB520005!
 </li>
-<li><p>01/2022. One paper accepted to IEEE/ACM Transactions on Networking. </p>
+<li><p>01/2022. One paper was accepted to IEEE/ACM TNET. </p>
 </li>  
-<li><p>08/2021. One paper accepted to IEEE Transactions on Communications. </p>
+<li><p>08/2021. One paper was accepted to IEEE TCOM. </p>
 </li>
 <li><p>05/2021. One paper accepted to IEEE ICWS 2021.
 </li>
