--- a/papers.html
+++ b/papers.html
@@ -29,18 +29,21 @@
 <p> * denotes the corresponding author.</p>
 <h2>Conference/workshop proceedings and journal publications</h2>
 <ol>
+   <li><p><a href="">NBBM: An Efficient SmartNIC-Based Architecture for Bare-Metal Management in Cloud Platforms </a><br />
+Likai Liu, Fu Xiao, Lei Han, Weibei Fan, <b>Xin He</b>, Zheng Wu. <br />
+IEEE Transactions on Computing (<b>IEEE TC</b>), 2025. <br /></p> 
   <li><p><a href="">Thunder: Minimum I/O Latency of Disaggregated Storage by Packet-Level Write-Through </a><br />
 Fu Xiao, Weibei Fan, <b>Xin He</b>, Junchang Wang, Lei Han, Xiaoliang Wang, Chen Tian, Xia Zhu. <br />
-IEEE Transactions on Networking (<b>TNET</b>), 2025. <br /></p> 
+IEEE Transactions on Networking (<b>IEEE TNET</b>), 2025. <br /></p> 
    <li><p><a href="">A Game Theoretic Approach for Efficient Congestion Control in Datacenter Networks </a><br />
 Likai Liu, Fu Xiao, Lei Han, Weibei Fan, <b>Xin He</b>. <br />
-IEEE Transactions on Network Science and Engineering (<b>TNSE</b>), 11(6): 6328-6344, 2024. <br /></p> 
+IEEE Transactions on Network Science and Engineering (<b>IEEE TNSE</b>), 11(6): 6328-6344, 2024. <br /></p> 
    <li><p><a href="">Accurate and fast congestion feedback in MEC-enabled RDMA datacenters </a><br />
 <b>Xin He</b>, Feifan Liang, Weibei Fan, Junchang Wang, Lei Han, Fu Xiao, Wanchun Dou. <br />
 Journal of Cloud Computing, 13(1): 72, 2024.<br /></p> 
  <li><p><a href="">Cost-Effective Migration-Assisted User Reallocation in Edge Computing </a><br />
 Jiahao Zhu, Fu Xiao, Lu Zhao, Jian Zhou, Hui Cai, <b>Xin He</b>. <br />
-In Proceedings of 2023 IEEE Global Communications Conference (<b>GLOBECOM</b>), Kuala Lumpur, Malaysia, December 4-8, 2023. (CCF-C) <br /></p> 
+In Proceedings of 2023 IEEE Global Communications Conference (<b>IEEE GLOBECOM</b>), Kuala Lumpur, Malaysia, December 4-8, 2023. (CCF-C) <br /></p> 
   <li><p><a href="">A Distributed Learning Method for Deep Echo State Network Based on Improved SVD and ADMM </a><br />
 Meifeng Zhu, Jian Zhou, Hui Cai, <b>Xin He</b>, Fu Xiao. <br />
 In Proceedings of the 20th International Conference on Mobile Ad Hoc and Smart Systems (<b>MASS</b>), Toronto, Canada, September 25-27, 2023. (CCF-C) <br /></p> 
@@ -50,7 +53,7 @@ Security and Communication Networks (<b>SCN</b>), 1-10, 2023. (CCF-C) <br /></p>
 </li> 
  <li><p><a href="">Joint Optimization of Measurement Point Intelligent Selection and End-to-End Network Traffic Calculation in Datacenters</a><br />
 Weibei Fan, Fu Xiao, Lei Han, <b>Xin He</b>, Junchang Wang. <br />
-IEEE Transactions on Network Science and Engineering (<b>TNSE</b>), 11(3): 2438-2449, 2023.  <br /></p>
+IEEE Transactions on Network Science and Engineering (<b>IEEE TNSE</b>), 11(3): 2438-2449, 2023.  <br /></p>
 </li>
 <li><p><a href="">Generalized Image Embedding for Multi-Domain Image Retrieval</a><br />
 Boao Xiao, Siyuan Wu, <b>Xin He*</b>, Wanchun Dou. <br />
@@ -58,11 +61,11 @@ In Proceedings of the 26th International Conference on Computer Supported Cooper
 </li>
 <li><p><a href="">Node Essentiality Assessment and Distributed Collaborative Virtual Network Embedding in Datacenters</a><br />
 Weibei Fan, Fu Xiao, Mengjie Lv, Lei Han, Junchang Wang, <b>Xin He</b>. <br />
-IEEE Transactions on Parallel and Distributed Systems (<b>TPDS</b>), 34(4): 1265-1280,2023. (<b>CCF-A</b>) <br /></p>
+IEEE Transactions on Parallel and Distributed Systems (<b>IEEE TPDS</b>), 34(4): 1265-1280,2023. (<b>CCF-A</b>) <br /></p>
 </li>
 <li><p><a href="">History-Assisted Online User Allocation in Mobile Edge Computing</a><br />
 <b>Xin He</b>, Jiaqi Zheng, Haipeng Dai, Bowen Liu, Wanchun Dou, Guihai Chen, Fu Xiao. <br />
-In Proceedings of the 29th IEEE International Conference on Web Services (<b>ICWS</b>), Barcelona, Spain, July 11-15, 2022. (<b>CCF-B</b>) </p>
+In Proceedings of the 29th IEEE International Conference on Web Services (<b>IEEE ICWS</b>), Barcelona, Spain, July 11-15, 2022. (<b>CCF-B</b>) </p>
 </li>
 <li><p><a href="">A Deep Learning-based Edge Caching Optimization Method for Cost-driven Planning Process over IIoT</a><br />
 Bowen Liu, Xutong Jiang, <b>Xin He</b>, Lianyong Qi, Xiaolong Xu, Xiaokang Wang, Wanchun Dou. <br />
@@ -70,7 +73,7 @@ Journal of Parallel and Distributed Computing (<b>JPDC</b>), 168: 80-89, 2022. (
 </li>
 <li><p><a href="">Continuous Network Update with Consistency Guaranteed in Software-Defined Networks</a><br />
 <b>Xin He</b>, Jiaqi Zheng, Haipeng Dai, Cong Zhang, Geng Li, Wanchun Dou, Wajid Rafique, Qiang Ni, Guihai Chen.<br />
-IEEE/ACM Transactions on Networking (<b>TNET</b>), 30(3): 1424-1438, 2022. (<b>CCF-A</b>) <br /></p>
+IEEE/ACM Transactions on Networking (<b>IEEE/ACM TNET</b>), 30(3): 1424-1438, 2022. (<b>CCF-A</b>) <br /></p>
 </li>
 <li><p><a href="">Online Computation Offloading for Deadline-aware Tasks in Edge Computing</a><br />
 <b>Xin He</b>, Jiaqi Zheng, Qiang He, Haipeng Dai, Bowen Liu, Wanchun Dou, Guihai Chen.<br />
@@ -78,29 +81,29 @@ Wireless Networks (<b>WINE</b>), 1-20, 2022. (CCF-C) <br /></p>
 </li>
 <li><p><a href="">CONFECT: Computation Offloading for Tasks with Hard / Soft Deadlines in Edge Computing</a><br />
 <b>Xin He</b>, Jiaqi Zheng, Qiang He, Haipeng Dai, Bowen Liu, Wanchun Dou, Guihai Chen.<br />
-In Proceedings of the 28th IEEE International Conference on Web Services (<b>ICWS</b>), Virtual, September 5-10, 2021. (<b>CCF-B</b>) <br /></p>
+In Proceedings of the 28th IEEE International Conference on Web Services (<b>IEEE ICWS</b>), Virtual, September 5-10, 2021. (<b>CCF-B</b>) <br /></p>
 </li>
 <li><p><a href="">Buffer-Assisted Network Updates in Timed SDN</a><br />
 <b>Xin He</b>, Jiaqi Zheng, Haipeng Dai, Yuhu Sun, Wanchun Dou, Guihai Chen.<br />
-IEEE Transactions on Communications (<b>TCOM</b>), 69(10): 6822-6837, 2021. (<b>CCF-B</b>) <br /></p>
+IEEE Transactions on Communications (<b>IEEE TCOM</b>), 69(10): 6822-6837, 2021. (<b>CCF-B</b>) <br /></p>
 </li>
 <li><p><a href="">Chronus+ : Minimizing Switch Buffer Size during Network Updates in Timed SDNs</a>   <br />
 <b>Xin He</b>, Jiaqi Zheng, Haipeng Dai, Yuhu Sun, Wanchun Dou, Guihai Chen <br />
-In Proceedings of the 40th IEEE International Conference on Distributed Computing (<b>ICDCS</b>), Singapore, July 8-10, 2020. (<b>CCF-B</b>) <br /></p>
+In Proceedings of the 40th IEEE International Conference on Distributed Computing (<b>IEEE ICDCS</b>), Singapore, July 8-10, 2020. (<b>CCF-B</b>) <br /></p>
 </li>
 <li><p><a href="">Coeus: Consistent and Continuous Network Update in Software-Defined Networks</a> <br />
 <b>Xin He</b>, Jiaqi Zheng, Haipeng Dai, Chong Zhang, Wajid Rafique, Geng Li, Wanchun Dou, Qiang Ni. <br />
-In Proceedings of the 39th IEEE International Conference on Computer Communications (<b>INFOCOM</b>), Toronto, Canada, July 6-9, 2020. (<b>CCF-A</b>) <br /></p>
+In Proceedings of the 39th IEEE International Conference on Computer Communications (<b>IEEE INFOCOM</b>), Toronto, Canada, July 6-9, 2020. (<b>CCF-A</b>) <br /></p>
 
 </li>
 <li><p><a href="">Offloading Deadline-aware Task in Edge Computing</a> <br />
 <b>Xin He</b>, Wanchun Dou. <br />
-In Proceedings of the IEEE International Conference on Cloud Computing (<b>CLOUD</b>), Workshop, Virtual Conference, October 19-23, 2020. (CCF-C) <br /></p>
+In Proceedings of the IEEE International Conference on Cloud Computing (<b>IEEE CLOUD</b>), Workshop, Virtual Conference, October 19-23, 2020. (CCF-C) <br /></p>
 
 </li>
 <li><p><a href="">CFADefense: A Security Solution to Detect and Mitigate Crossfire Attacks in Software-Defined IoT-Edge Infrastructure</a> <br />
 Wajid Rafique, <b>Xin He</b>, Zifan Liu, Yuhu Sun, Wanchun Dou. <br />
-In Proceedings of the 21th IEEE International Conference on High Performance Computing and Communications (<b>HPCC</b>), Zhangjiajie, China, August 10-12, 2019. (CCF-C) <br /></p>
+In Proceedings of the 21th IEEE International Conference on High Performance Computing and Communications (<b>IEEE HPCC</b>), Zhangjiajie, China, August 10-12, 2019. (CCF-C) <br /></p>
 
  </li>
 <li><p><a href="">Research of polarization navigation system based on division-of-amplitude</a> <br />
