--- a/students.html
+++ b/students.html
@@ -35,6 +35,8 @@
 </li>
   <li><p>Zhen Zhang, 2024&ndash; </p>
 </li> 
+  </li>
+  <li><p>Chang Liu, 2023&ndash; </p>
 </div> 
 </ul>
 <h3>Master students:</h3>
