--- a/students.html
+++ b/students.html
@@ -106,12 +106,13 @@
 </ul>
 </div>
 
-<h2>Group Activities</h2>
+<h2>Group Activities</h2> 
 
 <style>
 .carousel {
-  width: 460px;
-  height: 300px;
+  width: 100%;              /* 占满正文宽度 */
+  max-width: 900px;         /* 防止超宽屏幕太夸张，可自行调大/删除 */
+  height: 340px;
   overflow: hidden;
   position: relative;
   border-radius: 8px;
@@ -120,22 +121,21 @@
 
 .carousel-track {
   display: flex;
-  gap: 12px;
+  gap: 16px;
   animation: slide 30s infinite linear;
 }
 
 .slide {
-  width: 420px;
-  height: 260px;
+  flex: 0 0 520px;          /* 每张图片宽度 */
+  height: 320px;
   position: relative;
-  flex-shrink: 0;
   border-radius: 8px;
   overflow: hidden;
 }
 
 .slide img {
-  width: 420px;
-  height: 260px;
+  width: 100%;
+  height: 100%;
   object-fit: cover;
 }
 
@@ -154,9 +154,10 @@
   animation-play-state: paused;
 }
 
+/* 位移距离 = (图片宽度 + gap) × 图片数量 */
 @keyframes slide {
   0%   { transform: translateX(0); }
-  100% { transform: translateX(-2592px); } /* (420+12)*6 */
+  100% { transform: translateX(-3216px); } /* (520+16)*6 */
 }
 </style>
 
