--- a/students.html
+++ b/students.html
@@ -175,7 +175,7 @@
     </div>
 
     <div class="slide">
-      <img src="img/dinner1.jpg">
+      <img src="img/聚餐3.jpg">
       <div class="caption">Group Dinner</div>
     </div>
 
