Update captions for hiking images

--- a/students.html
+++ b/students.html
@@ -186,12 +186,12 @@
 
     <div class="slide">
       <img src="img/hiking1.jpg">
-      <div class="caption">Hiking Activity</div>
+      <div class="caption">Hiking</div>
     </div>
 
     <div class="slide">
       <img src="img/hiking2.jpg">
-      <div class="caption">Hiking Activity</div>
+      <div class="caption">Hiking</div>
     </div>
 
     <!-- 重复第一张用于无缝循环 -->
