--- a/papers.html
+++ b/papers.html
@@ -29,6 +29,18 @@
 <p> * denotes the corresponding author.</p>
 <h2>Conference/workshop proceedings and journal publications</h2>
 <ol>
+<li><p><a href="">F-PFC: Enabling Fine-grained PFC in Lossless Data Center Networks </a><br />
+<b>Xin He</b>, Yan Li, Jiaqi Zheng, Weibei Fan, Lei Han, Guihai Chen, Fu Xiao. <br />
+IEEE Transactions on Computing (<b>IEEE TC</b>), 2026 (Online). (<b>CCF-A</b>) <br /></p> 
+ <li><p><a href=""> Online Caching with Delayed Hits in Multi-Server Edge Networks</a><br />
+<b>Xin He</b>, Mingyu Cai, Meng Li, Haipeng Dai, Wei Peng, Jian Zhou,Fu Xiao. <br />
+IEEE Transactions on Mobile Computing (<b>IEEE TMC</b>), 2025 (Online). (<b>CCF-A</b>) <br /></p> 
+<li><p><a href=""> Rate-Adaptive RDMA Congestion Control for AI Clusters</a><br />
+<b>Xin He</b>, Zihao Zhang, Junchang Wang, Zheng Wu, Weibei Fan, Yiping Zuo. <br />
+Journal of Cloud Computing, 14(1): 82, 2025. <br /></p> 
+ <li><p><a href=""> Efficient LLM Edge Collaboration Deployment with LoRA</a><br />
+Yang Xiao, <b>Xin He<b>, Weijun Wang, Jian Zhou, Fu Xiao. <br />
+In Proceedings of the 31st International Conference on Parallel and Distributed Systems (<b>IEEE ICPADS</b>), Hefei, China, December 14-18, 2025. (<b>Best Student Paper</b>) <br /></p>
    <li><p><a href="">NBBM: An Efficient SmartNIC-Based Architecture for Bare-Metal Management in Cloud Platforms </a><br />
 Likai Liu, Fu Xiao, Lei Han, Weibei Fan, <b>Xin He</b>, Zheng Wu. <br />
 IEEE Transactions on Computing (<b>IEEE TC</b>), 2025. <br /></p> 
@@ -43,13 +55,13 @@ IEEE Transactions on Network Science and Engineering (<b>IEEE TNSE</b>), 11(6): 
 Journal of Cloud Computing, 13(1): 72, 2024.<br /></p> 
  <li><p><a href="">Cost-Effective Migration-Assisted User Reallocation in Edge Computing </a><br />
 Jiahao Zhu, Fu Xiao, Lu Zhao, Jian Zhou, Hui Cai, <b>Xin He</b>. <br />
-In Proceedings of 2023 IEEE Global Communications Conference (<b>IEEE GLOBECOM</b>), Kuala Lumpur, Malaysia, December 4-8, 2023. (CCF-C) <br /></p> 
+In Proceedings of 2023 IEEE Global Communications Conference (<b>IEEE GLOBECOM</b>), Kuala Lumpur, Malaysia, December 4-8, 2023.  <br /></p> 
   <li><p><a href="">A Distributed Learning Method for Deep Echo State Network Based on Improved SVD and ADMM </a><br />
 Meifeng Zhu, Jian Zhou, Hui Cai, <b>Xin He</b>, Fu Xiao. <br />
-In Proceedings of the 20th International Conference on Mobile Ad Hoc and Smart Systems (<b>MASS</b>), Toronto, Canada, September 25-27, 2023. (CCF-C) <br /></p> 
+In Proceedings of the 20th International Conference on Mobile Ad Hoc and Smart Systems (<b>MASS</b>), Toronto, Canada, September 25-27, 2023.  <br /></p> 
  <li><p><a href="">Adversarial Attacks on Large Language Model-Based System and Mitigating Strategies: A Case Study on ChatGPT</a><br />
 Bowen Liu, Boao Xiao, Xutong Jiang, Siyuan Wu, <b>Xin He</b>, Wanchun Dou. <br />
-Security and Communication Networks (<b>SCN</b>), 1-10, 2023. (CCF-C) <br /></p>
+Security and Communication Networks (<b>SCN</b>), 1-10, 2023.  <br /></p>
 </li> 
  <li><p><a href="">Joint Optimization of Measurement Point Intelligent Selection and End-to-End Network Traffic Calculation in Datacenters</a><br />
 Weibei Fan, Fu Xiao, Lei Han, <b>Xin He</b>, Junchang Wang. <br />
@@ -57,7 +69,7 @@ IEEE Transactions on Network Science and Engineering (<b>IEEE TNSE</b>), 11(3): 
 </li>
 <li><p><a href="">Generalized Image Embedding for Multi-Domain Image Retrieval</a><br />
 Boao Xiao, Siyuan Wu, <b>Xin He*</b>, Wanchun Dou. <br />
-In Proceedings of the 26th International Conference on Computer Supported Cooperative Work in Design (<b>CSCWD</b>), Rio de Janeiro, Brazil, May 24-26, 2023. (CCF-C) <br /></p>
+In Proceedings of the 26th International Conference on Computer Supported Cooperative Work in Design (<b>CSCWD</b>), Rio de Janeiro, Brazil, May 24-26, 2023.  <br /></p>
 </li>
 <li><p><a href="">Node Essentiality Assessment and Distributed Collaborative Virtual Network Embedding in Datacenters</a><br />
 Weibei Fan, Fu Xiao, Mengjie Lv, Lei Han, Junchang Wang, <b>Xin He</b>. <br />
@@ -98,12 +110,12 @@ In Proceedings of the 39th IEEE International Conference on Computer Communicati
 </li>
 <li><p><a href="">Offloading Deadline-aware Task in Edge Computing</a> <br />
 <b>Xin He</b>, Wanchun Dou. <br />
-In Proceedings of the IEEE International Conference on Cloud Computing (<b>IEEE CLOUD</b>), Workshop, Virtual Conference, October 19-23, 2020. (CCF-C) <br /></p>
+In Proceedings of the IEEE International Conference on Cloud Computing (<b>IEEE CLOUD</b>), Workshop, Virtual Conference, October 19-23, 2020.  <br /></p>
 
 </li>
 <li><p><a href="">CFADefense: A Security Solution to Detect and Mitigate Crossfire Attacks in Software-Defined IoT-Edge Infrastructure</a> <br />
 Wajid Rafique, <b>Xin He</b>, Zifan Liu, Yuhu Sun, Wanchun Dou. <br />
-In Proceedings of the 21th IEEE International Conference on High Performance Computing and Communications (<b>IEEE HPCC</b>), Zhangjiajie, China, August 10-12, 2019. (CCF-C) <br /></p>
+In Proceedings of the 21th IEEE International Conference on High Performance Computing and Communications (<b>IEEE HPCC</b>), Zhangjiajie, China, August 10-12, 2019.  <br /></p>
 
  </li>
 <li><p><a href="">Research of polarization navigation system based on division-of-amplitude</a> <br />
