--- a/papers.html
+++ b/papers.html
@@ -43,10 +43,10 @@ Yang Xiao, <b>Xin He<b>, Weijun Wang, Jian Zhou, Fu Xiao. <br />
 In Proceedings of the 31st International Conference on Parallel and Distributed Systems (<b>IEEE ICPADS</b>), Hefei, China, December 14-18, 2025. (<b>Best Student Paper</b>) <br /></p>
    <li><p><a href="">NBBM: An Efficient SmartNIC-Based Architecture for Bare-Metal Management in Cloud Platforms </a><br />
 Likai Liu, Fu Xiao, Lei Han, Weibei Fan, <b>Xin He</b>, Zheng Wu. <br />
-IEEE Transactions on Computing (<b>IEEE TC</b>), 2025. <br /></p> 
+IEEE Transactions on Computing (<b>IEEE TC</b>), 75(1): 204-218, 2025. (<b>CCF-A</b>) <br /></p> 
   <li><p><a href="">Thunder: Minimum I/O Latency of Disaggregated Storage by Packet-Level Write-Through </a><br />
 Fu Xiao, Weibei Fan, <b>Xin He</b>, Junchang Wang, Lei Han, Xiaoliang Wang, Chen Tian, Xia Zhu. <br />
-IEEE Transactions on Networking (<b>IEEE TNET</b>), 2025. <br /></p> 
+IEEE Transactions on Networking (<b>IEEE TNET</b>), 33(6): 3440-3454, 2025. (<b>CCF-A</b>) <br /></p> 
    <li><p><a href="">A Game Theoretic Approach for Efficient Congestion Control in Datacenter Networks </a><br />
 Likai Liu, Fu Xiao, Lei Han, Weibei Fan, <b>Xin He</b>. <br />
 IEEE Transactions on Network Science and Engineering (<b>IEEE TNSE</b>), 11(6): 6328-6344, 2024. <br /></p> 
@@ -73,7 +73,7 @@ In Proceedings of the 26th International Conference on Computer Supported Cooper
 </li>
 <li><p><a href="">Node Essentiality Assessment and Distributed Collaborative Virtual Network Embedding in Datacenters</a><br />
 Weibei Fan, Fu Xiao, Mengjie Lv, Lei Han, Junchang Wang, <b>Xin He</b>. <br />
-IEEE Transactions on Parallel and Distributed Systems (<b>IEEE TPDS</b>), 34(4): 1265-1280,2023. (<b>CCF-A</b>) <br /></p>
+IEEE Transactions on Parallel and Distributed Systems (<b>IEEE TPDS</b>), 34(4): 1265-1280, 2023. (<b>CCF-A</b>) <br /></p>
 </li>
 <li><p><a href="">History-Assisted Online User Allocation in Mobile Edge Computing</a><br />
 <b>Xin He</b>, Jiaqi Zheng, Haipeng Dai, Bowen Liu, Wanchun Dou, Guihai Chen, Fu Xiao. <br />
