Fix HTML tag for author's name in papers.html

--- a/papers.html
+++ b/papers.html
@@ -39,7 +39,7 @@ IEEE Transactions on Mobile Computing (<b>IEEE TMC</b>), 2025 (Online). (<b>CCF-
 <b>Xin He</b>, Zihao Zhang, Junchang Wang, Zheng Wu, Weibei Fan, Yiping Zuo. <br />
 Journal of Cloud Computing, 14(1): 82, 2025. <br /></p> 
  <li><p><a href=""> Efficient LLM Edge Collaboration Deployment with LoRA</a><br />
-Yang Xiao, <b>Xin He<b>, Weijun Wang, Jian Zhou, Fu Xiao. <br />
+Yang Xiao, <b>Xin He</b>, Weijun Wang, Jian Zhou, Fu Xiao. <br />
 In Proceedings of the 31st International Conference on Parallel and Distributed Systems (<b>IEEE ICPADS</b>), Hefei, China, December 14-18, 2025. (<b>Best Student Paper</b>) <br /></p>
    <li><p><a href="">NBBM: An Efficient SmartNIC-Based Architecture for Bare-Metal Management in Cloud Platforms </a><br />
 Likai Liu, Fu Xiao, Lei Han, Weibei Fan, <b>Xin He</b>, Zheng Wu. <br />
